starbridge_beacon_deployment/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starbridge-webserver-service
  labels:
    app: starbridge-webserver
    component: service
    platform: starbridge
spec:
  selector:
    app: starbridge-webserver
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
